# terrymath

./: .coverage  .coveragerc  .gitignore  COMPLIANCE.md  LICENSE  README.md  TERRYLAW.md  TERRYRULES.md  cli_terrymath.py  pyproject.toml  requirements.txt  terrygeometry.py  terrylinalg.py  terrymath.py  terryphysics.py
.github/workflows/: python-ci.yml
test/: TEST.md  test_error_handling.py  test_geometry.py  test_linalg.py  test_math_comparison.py  test_physics.py  test_standard_math.py  test_terrymath.py  test_terrymath_core.py  test_terrymath_modes.py  test_vectors_and_matrices.py
